Fixed author_payor value not showing on json object

--- a/app/assets/stylesheets/activity.css
+++ b/app/assets/stylesheets/activity.css
@@ -9,3 +9,13 @@
   background-color: transparent;
 
 }
+
+.activity-payee {
+  color: green;
+
+};
+
+.activity-payor {
+  color: red;
+
+}
